samples/_failures_safe/1761040383_a6d127_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_39439e28.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_39439e28.c:140:5: error: expected expression at end of input
  140 |     for (int i = 0; i < stack->count; i++)
      |     ^~~
./samples/SAFE/__tmp_39439e28.c:140:5: error: expected declaration or statement at end of input
